--- a/desafios/d010/android.html
+++ b/desafios/d010/android.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Como surgiu o mascote do android</title>
+    <title>Como surgiu o mascoste do Android?</title>
 </head>
 <body>
     
